# realtimeEdgeDetection

./: README.MD
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: CameraController.java  CameraUtils.java  MainActivity.java
app/src/main/java/com/example/myapplication/gl/: GLRenderer.java
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
